<resources>
    <string name="app_name">MinCheck</string>
    <string name="text_accounts">Mes informations personnelles</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_new_password">Enter a new password</string>
    <string name="hint_confirm_new_password">Confirm your new password</string>
    <string name="hint_edit_password">New password</string>
    <string name="hint_confirm_edit_password">CONFIRM</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Se déconnecter</string>
    <string name="text_hello">Hello </string>
    <string name="text_title">Votre compte</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="error_update_bdd">Failed to add users to database</string>
    <string name="title_activity_menu_student">MenuStudentActivity</string>
    <string name="tab_text_1">M\'enregistrer</string>
    <string name="tab_text_2_student">Mes absences</string>
    <string name="tab_text_2_teacher">Mes présences</string>
    <string name="tab_text_3">Mon compte</string>
    <string name="tab_text_4">Exclure un élève</string>
    <string name="send_password">Envoyer le mot de passe</string>
    <string name="information">
        1) Passes ta carte NFC près du lecteur pour t\'identifier\n\n
        2) Tapes le code reçu sur l\'application (attention au timer)\n
    </string>
    <string name="information2">
        3) Cliques sur le bouton pour t\'enregister\n\n
        4) Voila tu es identifié :)
    </string>
    <string name="code">Code</string>
    <string name="tapes_ton_code_ici">Tapes ton code ici</string>

</resources>
